--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -23,5 +23,5 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ghcr.io/macro-brief-line-bot:latest .
-          docker push ghcr.io/macro-brief-line-bot:latest
+          docker build -t ghcr.io/${{ github.repository_owner }}/macro-brief-line-bot:latest .
+          docker push ghcr.io/${{ github.repository_owner }}/macro-brief-line-bot:latest
